--- a/frontend/src/components/post/index.module.css
+++ b/frontend/src/components/post/index.module.css
@@ -17,3 +17,16 @@
     margin: 1rem;
    
 }
+.imgbox{
+display: flex;
+justify-content: center;
+}
+.imgItem{
+    position: relative;
+    padding: 10px;
+
+}
+.imgItem img{
+    width: 100%;
+    height: 100%;
+}
