--- a/frontend/src/components/echart/index.module.css
+++ b/frontend/src/components/echart/index.module.css
@@ -3,10 +3,10 @@
     height: 100%;
     background-color: aliceblue;
     display: flex;
-    justify-content:space-around;
+    justify-content:center;
     align-items: center;
 }
 .pieItem{
-    width: 500px;
-    height: 400px;
+    width: 600px;
+    height: 500px;
 }
